tests/lean/precissues.lean.expected.out
id (fun (x : ?m.4) => x) : ?m.4 → ?m.4
0 : Nat
f 1 (fun (x : Nat) => x) : Nat
0 : Nat
f 1 (fun (x : Nat) => x) : Nat
id : ?m.73 → ?m.73
precissues.lean:15:10: error: expected command
1 : Nat
id ((fun (this : True) => this) True.intro) : True
0=(fun (this : Nat) => this) 1 : Prop
0=let x : Nat := 0; x : Prop
p↔¬q : Prop
True=¬False : Prop
p∧¬q : Prop
¬p∧q : Prop
¬p↔q : Prop
¬p=q : Prop
¬p=q : Prop
id (¬p) : Prop
Nat → ∀ (a : Nat), a=a : Prop
